--- a/package.json
+++ b/package.json
@@ -9,31 +9,35 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "4.2.1"
   },
   "dependencies": {
     "hexo": "^4.0.0",
     "hexo-admin": "^2.3.0",
     "hexo-asset-image": "^1.0.0",
+    "hexo-baidu-url-submit": "^0.0.6",
     "hexo-deployer-git": "^2.1.0",
     "hexo-deployer-heroku": "^0.1.2",
     "hexo-deployer-openshift": "^0.1.2",
     "hexo-deployer-qcloud-cos": "^1.0.5",
     "hexo-deployer-rsync": "^1.0.0",
     "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-search": "^2.4.0",
+    "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-helper-live2d": "^3.1.1",
+    "hexo-lazyload-image": "^1.0.9",
     "hexo-render-pug": "^2.1.4",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-kramed": "^0.1.4",
-    "hexo-renderer-marked": "^3.0.0",
+    "hexo-renderer-markdown-it": "^5.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
-    "hexo-symbols-count-time": "^0.7.1"
+    "hexo-symbols-count-time": "^0.7.1",
+    "markdown-it-emoji": "^2.0.0"
   }
 }
