--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://tronwei.top
+url: http://tronwei.com
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -147,7 +147,7 @@ baidusitemap:
 # 百度主动推送
 baidu_url_submit:
   count: 5 ## 提交最新的 5 个链接
-  host: tronwei.top ## 注意修改为你在百度站长平台中注册的域名
+  host: tronwei.com ## 注意修改为你在百度站长平台中注册的域名
   token: Kh6e2kyfgFXlCTNP ## 注意修改为你的秘钥
   path: baidu_urls.txt ## 文本文档的地址  新链接会保存在此文本文档里
 
@@ -169,6 +169,16 @@ deploy:
   ##remotePath:
   - type: baidu_url_submitter
   
+encrypt: # hexo-blog-encrypt
+  abstract: 这里有东西被加密了，需要输入密码查看哦。
+  message: 您好, 这里需要密码.
+  tags:
+  - {name: tagName, password: 密码A}
+  - {name: tagName, password: 密码B}
+  template: <div id="hexo-blog-encrypt" data-wpm="{{hbeWrongPassMessage}}" data-whm="{{hbeWrongHashMessage}}"><div class="hbe-input-container"><input type="password" id="hbePass" placeholder="{{hbeMessage}}" /><label>{{hbeMessage}}</label><div class="bottom-line"></div></div><script id="hbeData" type="hbeData" data-hmacdigest="{{hbeHmacDigest}}">{{hbeEncryptedData}}</script></div>
+  wrong_pass_message: 抱歉, 这个密码看着不太对, 请再试试.
+  wrong_hash_message: 抱歉, 这个文章不能被校验, 不过您还是能看看解密后的内容.
+    
 ## markdown 渲染引擎配置，默认是hexo-renderer-marked (emoji)
 markdown:
   render:
@@ -185,7 +195,7 @@ markdown:
     - markdown-it-abbr
     - markdown-it-emoji
   anchors:
-    level: 1
+    level: 2
     collisionSuffix: 'v'
     permalink: true
     permalinkClass: header-anchor
