--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-admin": "^2.3.0",
     "hexo-asset-image": "^1.0.0",
     "hexo-baidu-url-submit": "^0.0.6",
+    "hexo-blog-encrypt": "^3.1.6",
     "hexo-deployer-git": "^2.1.0",
     "hexo-deployer-heroku": "^0.1.2",
     "hexo-deployer-openshift": "^0.1.2",
@@ -32,12 +33,15 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-helper-live2d": "^3.1.1",
     "hexo-lazyload-image": "^1.0.9",
+    "hexo-pdf": "^1.1.1",
     "hexo-render-pug": "^2.1.4",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-markdown-it": "^5.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-symbols-count-time": "^0.7.1",
-    "markdown-it-emoji": "^2.0.0"
+    "markdown-it-emoji": "^2.0.0",
+    "nunjucks": "^3.2.2"
   }
 }
